[package]
name = "ambientcg-dl"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.7"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
zip = "0.6.6"
